Bug 28629 - r6xx/r7xx: remove unnecessary state emit causes slow scrolling in seamonkey.
Summary: r6xx/r7xx: remove unnecessary state emit causes slow scrolling in seamonkey.
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/Radeon (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: xf86-video-ati maintainers
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-20 13:24 UTC by Andy Furniss
Modified: 2010-06-21 16:55 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Andy Furniss 2010-06-20 13:24:50 UTC
Running d-r-t kernel, git ddx, mesa, xserver (2 weeks off head) and libdrm on an AGP rv670.

Recent ddx commit 

c29157bbf5b0dd26857675282ab094082fbaed0d
r6xx/r7xx: remove unnecessary state emit

Makes fast scrolling of web pages in seamonkey slower.

If anyone updates then tests this - it won't show until you do a true cold boot.
Comment 1 Alex Deucher 2010-06-21 11:42:41 UTC
should be fixed in c3c5c8e2cc91b51a24effdffb85281216eed731d
Comment 2 Andy Furniss 2010-06-21 15:23:01 UTC
(In reply to comment #1)
> should be fixed in c3c5c8e2cc91b51a24effdffb85281216eed731d

That fixes it.

I also found that running glxgears would also fix it - so I guess anyone running a compositing desktop would never have seen it.
Comment 3 Andy Furniss 2010-06-21 15:32:13 UTC
(In reply to comment #2)
> (In reply to comment #1)
> > should be fixed in c3c5c8e2cc91b51a24effdffb85281216eed731d
> 
> That fixes it.

Reopened as I just quit X and found fbcon full of -

CS section size missmatch start at (r6xx_accel.c,set_default_state,982) 40 vs 42
CS section end at (r6xx_accel.c,set_default_state,1032)
Comment 4 Alex Deucher 2010-06-21 15:50:44 UTC
fixed in b13d719080b75fc6db4d15d2d323b8fce8b7ad06
Comment 5 Andy Furniss 2010-06-21 16:55:10 UTC
(In reply to comment #4)
> fixed in b13d719080b75fc6db4d15d2d323b8fce8b7ad06

Yea, it's OK now.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.