r6xx/r7xx accel: add back some additional default state

This adds back everything removed in c29157bbf5b0dd26857675282ab094082fbaed0d
except CB_FOG_*, CB_CLEAR_* and the VPORT transforms.  Those shouldn't
be needed as we aren't using fog or viewport transforms.  We probably don't
need all the state that was added back either but I can't reproduce any
problems here, so it's hard to say which parts are problematic.

Should fix:
https://bugs.freedesktop.org/show_bug.cgi?id=28629
and several corruption reports on #radeon.

Signed-off-by: Alex Deucher <alexdeucher@gmail.com>